<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/plusjakartasans_bold"
        android:text="@string/trashcare_dashboard"
        android:textSize="24sp"
        app:layout_constraintBaseline_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:gravity="start"
        android:text="@string/products"
        android:textColor="@color/black_and_white"
        android:textSize="16sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:strokeColor="@color/black_and_white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_tacycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:gravity="start"
        android:text="@string/tacycle"
        android:textColor="@color/black_and_white"
        android:textSize="16sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_to_products"
        app:strokeColor="@color/black_and_white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_tacommerce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:gravity="start"
        android:text="@string/tacommerce"
        android:textColor="@color/black_and_white"
        android:textSize="16sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_to_tacycle"
        app:strokeColor="@color/black_and_white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_tacampaign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:gravity="start"
        android:text="@string/tacampaign"
        android:textColor="@color/black_and_white"
        android:textSize="16sp"
        app:backgroundTint="@color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_to_tacommerce"
        app:strokeColor="@color/black_and_white"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plusjakartasans_regular"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_logout"
        app:iconTint="@color/white"
        app:iconGravity="textEnd"
        app:layout_constraintBaseline_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>