<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.products.ProductDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_product"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/tambahkan_foto"
                android:textSize="18sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageview"
                android:src="@drawable/ic_stock" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/plusjakartasans_bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/cv_product">

            <EditText
                android:id="@+id/et_product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Nama Produk"
                android:hint="@string/nama_produk"
                android:inputType="text"
                android:maxLength="20"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plusjakartasans_semibold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tl_product_name">

            <EditText
                android:id="@+id/et_product_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Harga Produk"
                android:hint="@string/harga_produk"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_product_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plusjakartasans_semibold"
            android:maxLength="20"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tl_product_price">

            <EditText
                android:id="@+id/et_product_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Stok Produk"
                android:hint="@string/stok_produk"
                android:inputType="number"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plusjakartasans_semibold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tl_product_stock"
            tools:text="Deskripsi Produk">

            <EditText
                android:id="@+id/et_product_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Deskripsi Produk"
                android:gravity="start"
                android:hint="@string/deskripsi_produk"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_product_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>